# react-native-nitro-crypto

./: README.md  README_zh.md  nitro.json  package.json  react-native-nitro-crypto.podspec
android/: CMakeLists.txt  OnLoad.cpp  build.gradle
android/src/main/java/com/margelo/nitro/node_crypto/: NitroNodeCryptoPackage.kt
cpp/: HybridNodeCrypto.cpp  HybridNodeCrypto.hpp
docs/: implementation-coverage.md
ios/Frameworks/RNCrypto.xcframework/: Info.plist
ios/Frameworks/RNCrypto.xcframework/ios-arm64/RNCrypto.framework/: Info.plist  RNCrypto
ios/Frameworks/RNCrypto.xcframework/ios-arm64/RNCrypto.framework/Headers/: rn_node_crypto.h
ios/Frameworks/RNCrypto.xcframework/ios-arm64_x86_64-maccatalyst/RNCrypto.framework/: RNCrypto
ios/Frameworks/RNCrypto.xcframework/ios-arm64_x86_64-maccatalyst/RNCrypto.framework/Versions/A/: RNCrypto
ios/Frameworks/RNCrypto.xcframework/ios-arm64_x86_64-simulator/Headers/: rn_node_crypto.h
ios/Frameworks/RNCrypto.xcframework/ios-arm64_x86_64-simulator/RNCrypto.framework/: RNCrypto
src/: CompatibilityRunner.ts  index.ts  native.ts  verify_types.ts
src/impl/: Certificate.ts  Cipheriv.ts  CryptoKey.ts  DiffieHellman.ts  ECDH.ts  Hash.ts  Hmac.ts  KeyObject.ts  Sign.ts  SubtleCrypto.ts  X509Certificate.ts  constants.ts  legacy.ts  pbkdf2.ts  random.ts  utils.ts
src/specs/: NitroNodeCrypto.nitro.ts
src/tests/: vectors.ts
